--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,6 @@
 [versions]
 # Build & Plugins
-#noinspection AndroidGradlePluginVersion
-agp = "8.6.0"
+agp = "8.5.0"
 kotlin = "2.0.0"
 ksp = "2.0.0-1.0.22"
 # AndroidX Core
@@ -14,7 +13,7 @@ lifecycleCompose = "2.8.2"
 # Compose
 composeBom = "2024.06.00"
 composeAnimation = "1.6.8"
-material = "1.13.0"
+material3 = "1.2.1"
 # Dependency Injection
 hilt = "2.51.1"
 hiltNavigationCompose = "1.2.0"
@@ -44,8 +43,7 @@ mockitoCore = "5.12.0"
 mockitoKotlin = "5.3.1"
 turbine = "1.1.0"
 workTesting = "2.9.0"
-animation = "1.9.3"
-generativeai = "0.9.0"
+material = "1.13.0"
 
 [libraries]
 # AndroidX Core
@@ -66,10 +64,8 @@ androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", versi
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
-google-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
-#noinspection SimilarGradleDependency
 androidx-compose-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "composeAnimation" }
 # Hilt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
@@ -86,6 +82,7 @@ retrofit-converter-kotlinx-serialization = { group = "com.jakewharton.retrofit",
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 # Kotlin Libraries
+kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "kotlin" }
 kotlinx-collections-immutable = { group = "org.jetbrains.kotlinx", name = "kotlinx-collections-immutable", version.ref = "kotlinxCollectionsImmutable" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 # Desugaring
@@ -105,9 +102,7 @@ testing-android-work = { group = "androidx.work", name = "work-testing", version
 # Debug Tools
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-#noinspection SimilarGradleDependency
-androidx-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "animation" }
-generativeai = { group = "com.google.ai.client.generativeai", name = "generativeai", version.ref = "generativeai" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -122,7 +117,7 @@ androidx-compose = [
     "androidx-ui",
     "androidx-ui-graphics",
     "androidx-ui-tooling-preview",
-    "androidx-material3",
+    "androidx-compose-material3",
     "androidx-material-icons-extended",
     "androidx-compose-animation"
 ]
